# kinara-daryaft

./: .gitignore  CMakeLists.txt  README.md
include/grayscaler/: include.h
include/knr/: args.h  canny.h  gauss.h  gradient.h  hysteresis.h  io.h  nms.h  utils.h
src/: args.cpp  canny.cpp  gauss.cpp  gradient.cpp  hysteresis.cpp  io.cpp  main.cpp  nms.cpp  utils.cpp
